# voice_engine

./: .gitignore  README.md  pyproject.toml
config/: voice_engine.example.yaml
src/voice_engine/: __init__.py  __main__.py  config.py  main.py  runtime.py
src/voice_engine/engine/: stt.py  vad.py
tests/: test_stt.py
tools/: audio_jabra_default.sh
